# Document-Check

./: .gitattributes  .gitignore  AGENTS.md  README.md  config.local.example.json  config.non-platform.example.yaml  config.platform.example.yaml  pyproject.toml  requirements.txt  run.py  windows_launcher.py
app/: __init__.py  auth.py  config.py  db.py  documents.py  file_cleanup.py  formatting.py  images.py  llm.py  model_discovery.py  network.py  routes.py  saml.py  saml1.py  task_types.py  tasks.py  translation_coverage.py  videos.py
app/static/: app.css  app.js
app/templates/: admin_consistency.html  admin_dashboard.html  admin_images.html  admin_language_consistency.html  admin_login.html  admin_models.html  admin_overview.html  admin_prompts.html  admin_settings.html  admin_tasks.html  admin_users.html  admin_videos.html  base.html  task_detail.html  task_form.html  task_report_export.html  user_consistency.html  user_images.html  user_language_consistency.html  user_models.html  user_tasks.html  user_videos.html
packaging/windows/: document-check.spec
scripts/: build_windows.bat  build_windows.ps1
tests/: test_config.py  test_db.py  test_documents.py  test_llm.py  test_model_discovery.py  test_network.py  test_routes.py  test_saml1.py  test_task_types.py  test_tasks.py  test_translation_coverage.py
