[project]
name = "document-check"
version = "0.1.0"
description = "文档智能门禁网站"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
  "beautifulsoup4==4.12.3",
  "flask==3.0.3",
  "mistune==3.0.2",
  "pypdf==4.3.1",
  "python-docx==1.1.2",
  "requests==2.32.3",
]

[tool.uv]
package = false
