[project]
name = "document-check"
version = "0.1.0"
description = "文档智能门禁网站"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
  "beautifulsoup4==4.12.3",
  "flask==3.0.3",
  "gevent==26.4.0",
  "mistune==3.0.2",
  "openpyxl==3.1.5",
  "pypdf[image]==4.3.1",
  "python-docx==1.1.2",
  "python3-saml==1.16.0",
  "pyyaml==6.0.2",
  "requests==2.32.3",
  "xlrd==2.0.1",
]

[tool.uv]
package = false

[dependency-groups]
build = [
    "pyinstaller>=6.20.0",
]
